# coco-swd

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  create.py
coco/: CMakeLists.txt  SwdDevice.cpp  SwdDevice.hpp
coco/stm32/coco/platform/: SwdDevice_SPI.cpp  SwdDevice_SPI.hpp
test/: CMakeLists.txt  SwdDeviceTest.cpp
test/nucleo-g431rb/: SwdDeviceTest.hpp
test/nucleo-g474re/: SwdDeviceTest.hpp
